--- a/index.html
+++ b/index.html
@@ -17,8 +17,63 @@
           <img src="assets/image/samsung-galaxy-on5.jpg" alt="samsung-galaxy-on5.jpg" class="img-responsive">
         </div>
       </div>
+      <div class="col-lg-6 bg-white padding-2-per">
+        <ul class="nav nav-tabs">
+          <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
+          <li><a data-toggle="tab" href="#menu1">Envío y Pago</a></li>
+          <li><a data-toggle="tab" href="#menu2">Garantía del Vendedor</a></li>
+        </ul>
+
+        <div class="tab-content">
+          <div id="home" class="tab-pane fade in active">
+            <h3>Especificaciones del artículo</h3>
+            <ul class="list-unstyled">
+              <li>Nombre de la marca: SAMSUNG</li>
+              <li>Desbloqueador de teléfonos: Sí</li>
+              <li>Google Play: Sí</li>
+              <li>Tipo de batería: No desmontable</li>
+              <li>Fecha de lanzamiento: 2016</li>
+              <li>Fecha de lanzamiento: 2016</li>
+              <li>Definición de grabación: 720P</li>
+              <li>Funcionamiento del sistema: Android</li>
+              <li>Fabricante del procesador: QUALCOMM</li>
+              <li>Característica: Respuesta a la gravedad,Reproducción de MP3,GPRS,Pantalla táctil,Navegación GPS,Mensaje,Bluetooth,Reproductor de vídeo,Reproductor de video HD,WI-FI,Ranuras para tarjetas de memoria</li>
+              <li>Diseño: Bar</li>
+              <li>Idioma: Rusa,Alemán,Francés,Español,Polaco,Portugués,Inglés</li>
+              <li>UPC: De ocho núcleos</li>
+              <li>Cámara: 13.0 MP</li>
+              <li>Capacidad de la batería (mAh): 2600mAh</li>
+              <li>Espesor: Ultra delgado (<"9mm")</li>
+              <li>Tipo de la cámara: Cámara delantera y trasera</li>
+              <li>Cantidad de Tarjetas SIM: Doble tarjeta Sim</li>
+              <li>Resolución de la pantalla: 1280x720</li>
+              <li>Tipo de Pantalla Táctil: Pantalla capacitiva</li>
+              <li>Teléfono móvil: GSM / WCDMA / LTE</li>
+              <li>Tiempo de Conversación: up to 5hours</li>
+              <li>32GB</li>
+              <li>Condición del artículo: Nueva</li>
+              <li>Modo de la venda: 2SIM/Multi-Bands</li>
+              <li>Tamaño: 142.8 x 69.5 x 8.1mm</li>
+              <li>Color de visualización: Color</li>
+            </ul>
+          </div>
+          <div id="menu1" class="tab-pane fade">
+            <h3>Menu 1</h3>
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div id="menu2" class="tab-pane fade">
+            <h3>Menu 2</h3>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+          </div>
+          <div id="menu3" class="tab-pane fade">
+            <h3>Menu 3</h3>
+            <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+
   <script type="text/javascript" src="assets/js/jquery.min.js"></script>
   <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
