--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/image/favicon.png" />
   <title>New Original Samsung Galaxy On5 G5510 2016 Unlocked Mobile Phone Dual SIM 4G LTE 5.0</title>
 </head>
 <body class="bg-gray-low">
@@ -28,54 +29,101 @@
           <div id="home" class="tab-pane fade in active">
             <h3>Especificaciones del artículo</h3>
             <ul class="list-unstyled">
-              <li>Nombre de la marca: SAMSUNG</li>
-              <li>Desbloqueador de teléfonos: Sí</li>
-              <li>Google Play: Sí</li>
-              <li>Tipo de batería: No desmontable</li>
-              <li>Fecha de lanzamiento: 2016</li>
-              <li>Fecha de lanzamiento: 2016</li>
-              <li>Definición de grabación: 720P</li>
-              <li>Funcionamiento del sistema: Android</li>
-              <li>Fabricante del procesador: QUALCOMM</li>
-              <li>Característica: Respuesta a la gravedad,Reproducción de MP3,GPRS,Pantalla táctil,Navegación GPS,Mensaje,Bluetooth,Reproductor de vídeo,Reproductor de video HD,WI-FI,Ranuras para tarjetas de memoria</li>
-              <li>Diseño: Bar</li>
-              <li>Idioma: Rusa,Alemán,Francés,Español,Polaco,Portugués,Inglés</li>
-              <li>UPC: De ocho núcleos</li>
-              <li>Cámara: 13.0 MP</li>
-              <li>Capacidad de la batería (mAh): 2600mAh</li>
-              <li>Espesor: Ultra delgado (<"9mm")</li>
-              <li>Tipo de la cámara: Cámara delantera y trasera</li>
-              <li>Cantidad de Tarjetas SIM: Doble tarjeta Sim</li>
-              <li>Resolución de la pantalla: 1280x720</li>
-              <li>Tipo de Pantalla Táctil: Pantalla capacitiva</li>
-              <li>Teléfono móvil: GSM / WCDMA / LTE</li>
-              <li>Tiempo de Conversación: up to 5hours</li>
+              <li><strong>Nombre de la marca:</strong> SAMSUNG</li>
+              <li><strong>Desbloqueador de teléfonos:</strong> Sí</li>
+              <li><strong>Google Play:</strong> Sí</li>
+              <li><strong>Tipo de batería:</strong> No desmontable</li>
+              <li><strong>Fecha de lanzamiento:</strong> 2016</li>
+              <li><strong>Fecha de lanzamiento:</strong> 2016</li>
+              <li><strong>Definición de grabación:</strong> 720P</li>
+              <li><strong>Funcionamiento del sistema:</strong> Android</li>
+              <li><strong>Fabricante del procesador:</strong> QUALCOMM</li>
+              <li><strong>Característica:</strong> Respuesta a la gravedad,Reproducción de MP3,GPRS,Pantalla táctil,Navegación GPS,Mensaje,Bluetooth,Reproductor de vídeo,Reproductor de video HD,WI-FI,Ranuras para tarjetas de memoria</li>
+              <li><strong>Diseño:</strong> Bar</li>
+              <li><strong>Idioma:</strong> Rusa,Alemán,Francés,Español,Polaco,Portugués,Inglés</li>
+              <li><strong>UPC:</strong> De ocho núcleos</li>
+              <li><strong>Cámara:</strong> 13.0 MP</li>
+              <li><strong>Capacidad de la batería (mAh):</strong> 2600mAh</li>
+              <li><strong>Espesor:</strong> Ultra delgado (<"9mm")</li>
+              <li><strong>Tipo de la cámara:</strong> Cámara delantera y trasera</li>
+              <li><strong>Cantidad de Tarjetas SIM:</strong> Doble tarjeta Sim</li>
+              <li><strong>Resolución de la pantalla:</strong> 1280x720</li>
+              <li><strong>Tipo de Pantalla Táctil:</strong> Pantalla capacitiva</li>
+              <li><strong>Teléfono móvil:</strong> GSM / WCDMA / LTE</li>
+              <li><strong>Tiempo de Conversación:</strong> up to 5hours</li>
               <li>32GB</li>
-              <li>Condición del artículo: Nueva</li>
-              <li>Modo de la venda: 2SIM/Multi-Bands</li>
-              <li>Tamaño: 142.8 x 69.5 x 8.1mm</li>
-              <li>Color de visualización: Color</li>
+              <li><strong>Condición del artículo:</strong> Nueva</li>
+              <li><strong>Modo de la venda:</strong> 2SIM/Multi-Bands</li>
+              <li><strong>Tamaño:</strong> 142.8 x 69.5 x 8.1mm</li>
+              <li><strong>Color de visualización:</strong> Color</li>
             </ul>
           </div>
           <div id="menu1" class="tab-pane fade">
-            <h3>Menu 1</h3>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <h3>Envío y Pago</h3>
+            <table width="100%">
+              <thead class="bg-gray-low">
+                <tr>
+                  <th>Empresa de transportes</th>
+                  <th>Gastos de envío</th>
+                  <th>Tiempo de entrega estimado</th>
+                  <th>Seguimiento</th>
+                </tr>
+              </thead>
+              <tbody>
+                <td>AliExpress Standard Shipping</td>
+                <td>US $13.47</td>
+                <td>43-59 días</td>
+                <td>Disponible</td>
+              </tbody>
+            </table>
+            <br>
+            <h4 class="bold-600">Detalles del Paquete</h4>
+            <ul class="list-unstyled">
+              <li>Tipo de unidad: Unidad</li>
+              <li>Dimensiones del paquete: 15cm x 10cm x 10cm (5.91in x 3.94in x 3.94in)</li>
+              <li>Peso del paquete: 0.5kg (1.10lb.)</li>
+            </ul>
+            <br>
+            <h4 class="bold-600">Pago</h4>
+            <span>Estos son los métodos de pago aceptados por AliExpress. Todos ellos son procesados a través de nuestro socio: la plataforma de pago Alipay.</span>
+            <div>
+              <img src="assets/image/logos.png" alt="logos payment" class="img-responsive">
+            </div>
           </div>
           <div id="menu2" class="tab-pane fade">
-            <h3>Menu 2</h3>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-          </div>
-          <div id="menu3" class="tab-pane fade">
-            <h3>Menu 3</h3>
-            <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+            <table width="100%">
+              <tbody>
+                <tr>
+                  <th>Política de devoluciones</th>
+                  <td class="text-justify">Si el producto que recibes es muy distinto de su descripción o de mala calidad, el vendedor se compromete a aceptar su devolución antes de que el pedido finalice (es decir, antes de hacer clic en "Confirmar el pedido" o mientras que no exceda el
+                    plazo de confirmación), y a devolverte íntegramente el dinero. Los gastos de envío para la devolución corren a tu cargo. Puedes optar por quedarte el producto y acordar la devolución del dinero directamente con el vendedor.
+                    long details</td>
+                  </tr>
+                  <tr>
+                    <th>Servicio del vendedor</th>
+                    <td class="text-justify">Entrega Puntual Si no recibes tu compra en 60 días, puedes solicitar la devolución íntegra del importe antes de que el pedido finalice (es decir, antes de hacer clic en «Confirmar el pedido» o mientras no se exceda el plazo de confirmación).</td>
+                  </tr>
+                </tbody>
+              </table>
+              <div>
+                <h3 class="bold-600">Protección al comprador</h3>
+                <p>
+                  <ul class="list-unstyled">
+                    <li>Tu compra protegida desde el primer clic hasta la entrega.</li>
+                    <li><strong>Devolución íntegra del dinero</strong>  si no recibes tu pedido</li>
+                    <li>Recibirás un reembolso si tu compra no llega en el plazo de entrega prometido por el vendedor</li>
+                    <li><strong>Reembolso íntegro o parcial</strong> si el artículo es distinto de su descripción</li>
+                    <li>Puedes recibir la devolución íntegra de tu dinero si el producto es muy distinto de su descripción ,o ,</li>
+                  </ul>
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-
-  <script type="text/javascript" src="assets/js/jquery.min.js"></script>
-  <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="assets/js/app.js"></script>
-</body>
-</html>
+    <script type="text/javascript" src="assets/js/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="assets/js/app.js"></script>
+  </body>
+  </html>
